--- a/index.html
+++ b/index.html
@@ -2280,13 +2280,21 @@
                 </div>
             </div>
         </div>
+             <h1 style="position: absolute;
+  top: 75%;
+  left: 23%;
+  /* font-family: cursive; */
+  font-size: 3rem;
+  color: indianred;">
+             Qynh❤️
+        </h1>
         <h1 style="position: absolute;
   top: 75%;
   left: 23%;
   /* font-family: cursive; */
   font-size: 3rem;
   color: indianred;">
-            i love you - Qynh❤️
+            i love you
         </h1>
         <div class='vehicle-body'>
             <div class='wrap-body'>
